1. User: Entity and Repository with Interface

--- a/SecurityConnect.Application/SecurityConnect.Application.csproj
+++ b/SecurityConnect.Application/SecurityConnect.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SecurityConnect.Domain\SecurityConnect.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
