--- a/SecurityConnect.Infrastructure/SecurityConnect.Infrastructure.csproj
+++ b/SecurityConnect.Infrastructure/SecurityConnect.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SecurityConnect.Application\SecurityConnect.Application.csproj" />
+  </ItemGroup>
+
 </Project>
