--- a/SecurityConnect.Infrastructure/SecurityConnect.Infrastructure.csproj
+++ b/SecurityConnect.Infrastructure/SecurityConnect.Infrastructure.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SecurityConnect.Application\SecurityConnect.Application.csproj" />
