--- a/SecurityConnect.Application/SecurityConnect.Application.csproj
+++ b/SecurityConnect.Application/SecurityConnect.Application.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\SecurityConnect.Domain\SecurityConnect.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="1.2.1" />
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="MediatR" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
