--- a/SecurityConnect.Domain/SecurityConnect.Domain.csproj
+++ b/SecurityConnect.Domain/SecurityConnect.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Common\" />
+    <PackageReference Include="ErrorOr" Version="1.2.1" />
   </ItemGroup>
 
 </Project>
