--- a/SecurityConnect.Application/SecurityConnect.Application.csproj
+++ b/SecurityConnect.Application/SecurityConnect.Application.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.2.1" />
     <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
     <PackageReference Include="MediatR" Version="12.0.1" />
   </ItemGroup>
 
