7. Implemented Authentication Controller, integrated ProblemDetail and HttpContextItemsKeys. Configured AuthenticationMapping and registered services in API.

--- a/SecurityConnect.API/appsettings.json
+++ b/SecurityConnect.API/appsettings.json
@@ -1,9 +1,17 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+
+    "Secret": "",
+    "ExpiryMinutes": 0,
+    "Issuer": "",
+    "Audience": ""
+  }
+
 }
