--- a/SecurityConnect.API/SecurityConnect.API.csproj
+++ b/SecurityConnect.API/SecurityConnect.API.csproj
@@ -4,10 +4,20 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b712ab76-c191-4c81-b5af-9ad792117b0f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <PackageReference Include="ErrorOr" Version="1.2.1" />
+    <PackageReference Include="FluentValidation" Version="11.5.2" />
+    <PackageReference Include="Mapster" Version="7.3.0" />
+    <PackageReference Include="MediatR" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SecurityConnect.Application\SecurityConnect.Application.csproj" />
+    <ProjectReference Include="..\SecurityConnect.Contracts\SecurityConnect.Contracts.csproj" />
+    <ProjectReference Include="..\SecurityConnect.Infrastructure\SecurityConnect.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
