--- a/SecurityConnect.API/appsettings.Development.json
+++ b/SecurityConnect.API/appsettings.Development.json
@@ -1,8 +1,15 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "JwtSettings": {
+    "Secret": "",
+    "ExpiryMinutes": 60,
+    "Issuer": "SecurityConnect",
+    "Audience": "SecurityConnect"
   }
 }
