--- a/SecurityConnect.API/SecurityConnect.WebApp.csproj
+++ b/SecurityConnect.API/SecurityConnect.WebApp.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="Mapster" Version="7.3.0" />
     <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="MudBlazor" Version="6.4.1" />
   </ItemGroup>
 
   <ItemGroup>
